--- a/TDD_HomeWork2_BookStore.csproj
+++ b/TDD_HomeWork2_BookStore.csproj
@@ -50,6 +50,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Book.cs" />
     <Compile Include="ShoppingDiscount.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
